fix error of dockerfile

--- a/1.0.1/dockerfile_amd
+++ b/1.0.1/dockerfile_amd
@@ -5,10 +5,10 @@ COPY gosu-amd64 /usr/local/bin/gosu
 
 ENV LANG en_US.utf8
 
-#RUN yum install -y epel-release
+RUN yum install -y epel-release
 
 RUN set -eux; \
-    yum install -y bzip2 bzip2-devel curl libaio&& \
+    yum install -y bzip2 bzip2-devel curl libaio && \
     groupadd -g 70 omm;  \
     useradd -u 70 -g omm -d /home/omm omm;  \
     mkdir -p /var/lib/opengauss && \
