--- a/demo/config
+++ b/demo/config
@@ -1,12 +1,20 @@
 BASEDIR=$(dirname $0)
 DB_SERVER_NAME=serverless-metadata-db 
+og_repo=enmotech
+VERSION=1.0.1
 
 #================== config ================== 
 DB_DATA_DIR=/mnt/serverless_db
 NETWORK_NAME=serverless_network
 SLS_SUBNET=175.11.0.0/24
-DB_IP=175.11.0.101
+DB_IP=175.11.0.220
 DB_PORT=3307
 
 DB_PWD=my-secret-pw
+
+MAX_SLAVE_COUNT=10
+PORT_START=5432
+
+GS_PASSWORD=Enmo@123
+
 
